Добавил генерацию таблицы
todo:
Проверка на то, что таблица уже сгенерирована
Отцентрировать таблицу по середине страницы
Естестна написать алгоритм построения лабиринта
Желательно убрать расстояние между ячейками

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 *{
     text-align: center;
 }
+.action-button{
+    color: blue;
+}
+td{
+    background-color: black;
+}
+div{
+    background-color: red;
+    display: table;
+    align-self: center;
+}
